--- a/sites/summit/Makefile_sedov_gpu_cpp
+++ b/sites/summit/Makefile_sedov_gpu_cpp
@@ -105,7 +105,7 @@ SRCS       = \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_1.cpp \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_2.cpp \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
-    $(SIMDIR)/Eos_idealGamma_dens_ie.cpp \
+    $(SIMDIR)/Eos_idealGammaDensIe.cpp \
     $(SIMDIR)/Io.cpp \
     $(SIMDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
     $(SIMDIR)/Driver_data.cpp \
