--- a/sites/hello/Makefile_sedov_cpu_cpp
+++ b/sites/hello/Makefile_sedov_cpu_cpp
@@ -79,8 +79,8 @@ SRCS       = \
     $(SIMDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
     $(SIMDIR)/hy_computeFluxesHll.cpp \
     $(SIMDIR)/hy_updateSolutionHll.cpp \
-    $(SIMDIR)/Hydro_advanceSolution_tile_cpu.cpp \
-    $(SIMDIR)/Eos_idealGamma_dens_ie.cpp \
+    $(SIMDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
+    $(SIMDIR)/Eos_idealGammaDensIe.cpp \
     $(SIMDIR)/Io.cpp \
     $(SIMDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
     $(SIMDIR)/Driver_data.cpp \
