--- a/sites/hello/Makefile_sedov_baseline_cpp
+++ b/sites/hello/Makefile_sedov_baseline_cpp
@@ -7,7 +7,7 @@ INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTBASEDIR  = $(BASEDIR)/test/Base
 SIMDIR       = $(BASEDIR)/simulations/Sedov
-AMREXDIR     = $(HOME)/local/gcc_6.5.0/AMReX_2D
+AMREXDIR     = $(HOME)/local/gcc_6.5.0/AMReX_$(NDIM)D
 
 # Common files
 CXX_HDRS   = \
