(Issue #19) Updated the Summit build systems and job scripts so that it can now build 3D Sedov problems.  Added the facilities to run the Sedov baseline version of the problem as well.
Pending testing of all results.

--- a/sites/summit/Makefile_cuda_backend
+++ b/sites/summit/Makefile_cuda_backend
@@ -8,7 +8,7 @@ BASEDIR      = ../..
 INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTDIR      = $(BASEDIR)/test/CudaBackend
-GTESTDIR     = $(HOME)/local/pgi_19.9/googletest
+GTESTDIR     = $(RUNTIME_DEP_PATH)/pgi_19.9/googletest
 CUDADIR      = $(OLCF_CUDA_ROOT)
 
 # Common files
