--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ sites/summit/gatherDataCpp.*
 sites/summit/gatherDataF2003.*
 sites/summit/sedovCpuCpp.*
 sites/summit/sedovGpuCpp.*
+sites/summit/sedovBaselineCpp.*
 sites/bebop/build/build_*.log
 sites/bebop/test_threadteam_cpp_bebop.[oe]*
 sites/bebop/test_runtime_cpp_bebop.[oe]*
