--- a/sites/summit/Makefile_gatherData_cpp
+++ b/sites/summit/Makefile_gatherData_cpp
@@ -9,7 +9,7 @@ INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTBASEDIR  = $(BASEDIR)/test/Base
 TESTDIR      = $(BASEDIR)/test/GatherDataCpp
-AMREXDIR     = $(HOME)/local/pgi_19.9/AMReX_2d
+AMREXDIR     = $(RUNTIME_DEP_PATH)/pgi_19.9/AMReX_2d
 CUDADIR      = $(OLCF_CUDA_ROOT)
 PGIDIR       = $(OLCF_PGI_ROOT)/linuxpower/19.9
 
