--- a/sites/summit/Makefile_runtime_null_cpp
+++ b/sites/summit/Makefile_runtime_null_cpp
@@ -9,7 +9,7 @@ INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTBASEDIR  = $(BASEDIR)/test/Base
 TESTDIR      = $(BASEDIR)/test/RuntimeNull
-GTESTDIR     = $(HOME)/local/gcc_9.1.0/googletest
+GTESTDIR     = $(RUNTIME_DEP_PATH)/gcc_9.1.0/googletest
 
 # Common files
 CXX_HDRS   = \
