--- a/sites/summit/Makefile_gatherData_cpp
+++ b/sites/summit/Makefile_gatherData_cpp
@@ -50,7 +50,8 @@ CXX_HDRS   = \
     $(TESTBASEDIR)/computeLaplacianDensity.h \
     $(TESTBASEDIR)/computeLaplacianEnergy.h \
     $(TESTBASEDIR)/computeLaplacianFused.h \
-    $(TESTBASEDIR)/Analysis.h
+    $(TESTBASEDIR)/Analysis.h \
+    $(TESTBASEDIR)/Driver.h
 CU_HDRS   = \
     $(INCDIR)/CudaGpuEnvironment.h \
     $(INCDIR)/CudaDataPacket.h \
