updating Makefile to be more rigorously formatted

--- a/test/Grid/Makefile.test
+++ b/test/Grid/Makefile.test
@@ -1,6 +1,5 @@
-BASE         = test_grid_cpp
+BINARYNAME   = test_grid_cpp.x
 TESTDIR      = $(BASEDIR)/test/Grid
-TESTBASEDIR  = $(BASEDIR)/test/Base
 
 SRCS       += \
     $(TESTDIR)/runGridTest.cpp \
