(Issue #22) Multithreaded-distributor code should not be turned on just because OpenMP is enabled at compilation.  It could be that someone wants to use OpenMP for offloading to the GPU, but not want to use a multithreaded distributor. Therefore, added a new dedicated preprocessor macro for this.

--- a/sites/hello/Makefile_runtime_cpu_cpp
+++ b/sites/hello/Makefile_runtime_cpu_cpp
@@ -117,6 +117,10 @@ ifdef DEBUG
 CXXFLAGS := $(CXXFLAGS) -DDEBUG_RUNTIME
 endif
 
+ifdef THREADED_DISTRIBUTOR
+CXXFLAGS := $(CXXFLAGS) -DUSE_THREADED_DISTRIBUTOR
+endif
+
 all:    $(COMMAND)
 
 .SUFFIXES:
