fix make lcov command

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ studies/Summit_2020-04-15/gatherDataCpp_*
 studies/Summit_2020-04-15/gatherDataF2003_*
 studies/Summit_2020-04-15/testRuntimeCpp_*
 studies/Summit_2020-04-15/testThreadTeam_*
+build/*
