--- a/sites/Thomass-MBP/Makefile.site
+++ b/sites/Thomass-MBP/Makefile.site
@@ -1,16 +1,19 @@
 # Define the following paths:
 #  - BASEDIR: Path to the repository root directory
 #  - AMREXDIR: Path to the appropriate AMReX build directory
+#              (can use the variable NDIM from Makefile.setup)
 #  - GTESTDIR: Path to the Googletest build directory
-BASEDIR      = /Users/tklosterman/Documents/orchestrationruntime
+BASEDIR      = $(HOME)/Documents/orchestrationruntime
 AMREXDIR     = $(HOME)/Documents/amrex/$(NDIM)d_gnu
 GTESTDIR     = $(HOME)/Documents/googletest/googletest
 
 # Define the following compiler-related flags
+#  - CXXCOMPNAME: Name of C++ compiler {gnu, pgi, xl, clang}
 #  - CXXCOMP: The desired C++ compiler command or path
 #  - CXXFLAGS_PROD, CXXFLAGS_DEBUG: The set of compiler flags. The debug option
 #        will be chosen if --debug (or -d) is included in the setup command,
 #        otherwise the production flags will be used.
+CXXCOMPNAME  = gnu
 CXXCOMP      = mpicxx
 
 CXXFLAGS_PROD    = -g -O0 -DGRID_LOG
