--- a/sites/summit/Makefile_sedov_gpu_cpp
+++ b/sites/summit/Makefile_sedov_gpu_cpp
@@ -93,6 +93,8 @@ SRCS       = \
     $(TESTBASEDIR)/errorEstBlank.cpp \
     $(SIMDIR)/sim_setInitialConditions.cpp \
     $(SIMDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
+    $(SIMDIR)/hy_computeFluxesHll.cpp \
+    $(SIMDIR)/hy_updateSolutionHll.cpp \
     $(SIMDIR)/hy_computeSoundSpeedHll_oacc_summit.cpp \
     $(SIMDIR)/hy_computeFluxesHll_X_oacc_summit.cpp \
     $(SIMDIR)/hy_computeFluxesHll_Y_oacc_summit.cpp \
@@ -109,6 +111,7 @@ SRCS       = \
     $(SIMDIR)/hy_updateVelzHll_oacc_summit.cpp \
     $(SIMDIR)/hy_updateEnergyHll_oacc_summit.cpp \
     $(SIMDIR)/hy_updateSolutionHll_oacc_summit.cpp \
+    $(SIMDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_1.cpp \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_2.cpp \
     $(SIMDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
