adjusting summit optimization to O0

--- a/sites/summit/Makefile.site
+++ b/sites/summit/Makefile.site
@@ -19,7 +19,7 @@ CUDADIR      = $(OLCF_CUDA_ROOT)
 CXXCOMPNAME  = pgi
 CXXCOMP      = mpicxx
 
-CXXFLAGS_PROD    = -O3 -DGRID_LOG -m64
+CXXFLAGS_PROD    = -g -O0 -DGRID_LOG -m64
 CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG -m64
 
 
