don't include MoverUnpacker in non-cuda tests

--- a/simulations/Sedov/gpu/Makefile.test
+++ b/simulations/Sedov/gpu/Makefile.test
@@ -19,6 +19,7 @@ LDFLAGS_TEST  += $(OACC_FLAGS)
 # Define list of sources in SRCS_TEST
 SRCS_TEST      = \
 	$(SRCDIR)/DataPacket.cpp \
+	$(SRCDIR)/MoverUnpacker.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
