--- a/test/CudaBackend/Makefile.test
+++ b/test/CudaBackend/Makefile.test
@@ -20,7 +20,8 @@ LDFLAGS_TEST  += $(OACC_FLAGS)
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST      = \
-        $(SRCDIR)/DataPacket.cpp \
+	$(SRCDIR)/DataPacket.cpp \
+	$(SRCDIR)/MoverUnpacker.cpp \
 	$(TESTDIR)/runCudaBackendTests.cpp
 
 CU_SRCS = $(TESTDIR)/testCudaStreamManager.cu \
