--- a/simulations/Sedov/gpu/Makefile.test
+++ b/simulations/Sedov/gpu/Makefile.test
@@ -6,7 +6,9 @@ SEDOVDIR   = $(BASEDIR)/simulations/Sedov
 TESTDIR    = $(BASEDIR)/simulations/Sedov/gpu
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(SEDOVDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
+CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
+                -DENABLE_OPENACC_OFFLOAD
+CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
                 -DENABLE_OPENACC_OFFLOAD
 CUFLAGS_TEST = -I$(SEDOVDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
                 -DENABLE_OPENACC_OFFLOAD
