--- a/test/Grid/Makefile.test
+++ b/test/Grid/Makefile.test
@@ -6,7 +6,8 @@ TESTDIR       = $(BASEDIR)/test/Grid
 TESTBASEDIR   = $(BASEDIR)/test/Base
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
 
 LDFLAGS_TEST  = $(LIB_GTEST)
 
