--- a/test/Runtime/Makefile.test
+++ b/test/Runtime/Makefile.test
@@ -8,7 +8,9 @@ TESTBASEDIR   = $(BASEDIR)/test/Base
 PGIDIR        = $(OLCF_PGI_ROOT)/linuxpower/19.9
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(TESTBASEDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
+		-DENABLE_OPENACC_OFFLOAD -UNDEBUG
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTDIR) -DUSE_CUDA_BACKEND \
 		-DENABLE_OPENACC_OFFLOAD -UNDEBUG
 CUFLAGS_TEST  = -I$(PGIDIR)/include -I$(TESTBASEDIR) -I$(TESTDIR) \
 		-DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD -UNDEBUG \
