--- a/test/ThreadTeam/Makefile.test
+++ b/test/ThreadTeam/Makefile.test
@@ -6,7 +6,8 @@ TESTDIR       = $(BASEDIR)/test/ThreadTeam
 TESTBASEDIR   = $(BASEDIR)/test/Base
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(TESTBASEDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTDIR) -DDEBUG_RUNTIME
 LDFLAGS_TEST  =
 
 # This test uses Google Test
