--- a/test/Runtime/Makefile.test
+++ b/test/Runtime/Makefile.test
@@ -18,12 +18,14 @@ CUFLAGS_TEST  = -I$(PGIDIR)/include -I$(TESTBASEDIR) -I$(TESTDIR) \
 LDFLAGS_TEST  = -lcudart -L$(CUDADIR)/lib64 -L$(PGIDIR)/lib
 
 # This test uses Google Test
-CXXFLAGS_TEST += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG += $(CXXFLAGS_GTEST)
 CUFLAGS_TEST  += $(CXXFLAGS_GTEST)
 LDFLAGS_TEST  += $(LIB_GTEST)
 
 # This test uses OACC
-CXXFLAGS_TEST += $(OACC_FLAGS)
+CXXFLAGS_TEST_PROD  += $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG += $(OACC_FLAGS)
 LDFLAGS_TEST  += $(OACC_FLAGS)
 
 # Define list of sources in SRCS_TEST
