--- a/test/ThreadTeam/Makefile.test
+++ b/test/ThreadTeam/Makefile.test
@@ -11,7 +11,8 @@ CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTDIR) -DDEBUG_RUNTIME
 LDFLAGS_TEST  =
 
 # This test uses Google Test
-CXXFLAGS_TEST += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG += $(CXXFLAGS_GTEST)
 LDFLAGS_TEST  += $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
