--- a/test/CudaBackend/Makefile.test
+++ b/test/CudaBackend/Makefile.test
@@ -11,12 +11,14 @@ CUFLAGS_TEST = -I$(TESTDIR) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD -D__PGI
 LDFLAGS_TEST = -lcudart -L$(CUDADIR)/lib64
 
 # This test uses Google Test
-CXXFLAGS_TEST += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  += $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG += $(CXXFLAGS_GTEST)
 CUFLAGS_TEST += $(CXXFLAGS_GTEST)
 LDFLAGS_TEST  += $(LIB_GTEST)
 
 # This test uses OACC
-CXXFLAGS_TEST += $(OACC_FLAGS)
+CXXFLAGS_TEST_PROD  += $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG += $(OACC_FLAGS)
 LDFLAGS_TEST  += $(OACC_FLAGS)
 
 # Define list of sources in SRCS_TEST
